<resources>

    <string name="app_name">My Android PHP MySQL</string>
    <string name="profile">User Profile</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="editTextEmailAddress">Enter your email</string>
    <string name="username">Username</string>
    <string name="editTextUserName">Enter your username</string>
    <string name="password">Password</string>
    <string name="editTextPassword">Enter your password</string>
    <string name="buttonRegister">Register</string>
    <string name="login">Already Registered? Click here to Login </string>
    <string name="buttonLogin">Login</string>

</resources>