<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/editTextEmailAddress"
        android:textSize="24sp"
        android:autofillHints="emailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/username"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/editTextUserName"
        android:textSize="24sp"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textVisiblePassword"
        android:hint="@string/editTextPassword"
        android:textSize="24sp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/buttonRegister"
        android:textSize="24sp"
        android:backgroundTint="@color/gray" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="none"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/hyperlink_hover"
        android:textSize="20sp"
        android:background="@color/transparent"/>

</LinearLayout>